# empowerment_plasticity

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
experiments/: demo.py  dit_test.py  it_diagnositc.py  it_diagnostic.py  jax_test.py  measure_FollowerAgent.py  measure_QLearner.py  measure_eachroom.py  mutual_info.py  test_empowerment.py
notebooks/: emp_plast.ipynb
src/: __init__.py  directed_info.py  environment.py  info_theory.py  mutual_info.py
src/agents/: QLearning.py
src/environments/: BitWorld.py  FourRooms.py  LightRooms.py
