[project]
name = "emp-plast"
version = "0.1.0"
description = "Measuring empowerment and plasticity"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.26.0",
    "matplotlib==3.7.4",
    "pygame==2.5.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "numba>=0.61.2",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
